# firefox_history

./: README.md  pyproject.toml  requirements.txt
firefox_history/: main.py
