[tool.poetry]
name = "firefox_history"
version = "0.1.0"
description = ""
authors = ["Victor Otieno <vickz84259@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
